[gd_scene load_steps=5 format=2]

[ext_resource path="res://SCRIPTS/UI.gd" type="Script" id=1]
[ext_resource path="res://FONTS/Roboto/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://FONTS/Roboto/MainMenuFont.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Score_Left" type="Label" parent="."]
margin_left = 35.0
margin_right = 75.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_Right" type="Label" parent="."]
margin_left = 172.0
margin_right = 212.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball_Reset" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_right = 100.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win_Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -7.0
margin_right = 100.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 3 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_Ball_Reset" type="Timer" parent="."]

[node name="Timer_Win_Message" type="Timer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.137255, 0.0784314, 0.0784314, 0.415686 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer_Ball_Reset" to="." method="_on_Timer_Ball_Reset_timeout"]
[connection signal="timeout" from="Timer_Win_Message" to="." method="_on_Timer_Win_Message_timeout"]
